# 2boot

./: .clang-format  .editorconfig  .gitignore  CMakeLists.txt  CMakePresets.json
bootloader/: CMakeLists.txt  main.cc  utilities.hh
cmake/: CxxStandardDefs.cmake
cmake/toolchains/: x86_64-uefi.cmake
libraries/common/: CMakeLists.txt
libraries/common/include/libcommon/: hooks.hh
libraries/common/src/: memory.cc
libraries/uefi/: CMakeLists.txt
libraries/uefi/include/: libuefi.hh
libraries/uefi/include/libuefi/: boot_services.hh  globals.hh  primitives.hh  runtime_services.hh  system_table.hh
libraries/uefi/include/libuefi/ext/: fs.hh  gfx.hh  string.hh
libraries/uefi/include/libuefi/protocol/: boot_logo.hh  device_path.hh  file.hh  graphics_output.hh  loaded_image.hh  simple_filesystem.hh  simple_text_input.hh  simple_text_output.hh
libraries/uefi/src/: fs.cc  gfx.cc  globals.cc  string.cc
runtime-driver/: CMakeLists.txt  main.cc
scripts/: bdf2gopf.py  img2gopb.py  qemu.sh
